--- a/src/components/Summary/summary.css
+++ b/src/components/Summary/summary.css
@@ -38,14 +38,14 @@
     font-weight: 500;
     color: #086AF8;
 }
-.summary-btn{
-    font-weight: 600 !important;
+.confirm-btn{
+    font-weight: 500 !important;
     background-color: blue !important;
-    margin-top: 20px !important;
-    font-size: 25px !important;
+    margin-top: 100px !important;
+    font-size: 10px !important;
     padding: 15px 40px !important;
     float: right;
-    width: 200px;
+    width: 50px;
 }
 .summary-text{
     margin-top: 10px;
