--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,4 +2,11 @@ footer {
   margin-top: 80px;
   padding: 20px;
   text-align: center;
+  position: fixed;
+  bottom: 0;
+  margin-top: 80px;
+  padding: 5px;
+  text-align: center;
+  margin: auto;
+  width: 100%
 }
