--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,6 +7,7 @@ body,
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0px;
+  background-color: rgb(90, 90, 170);
 }
 
 img {
@@ -20,6 +21,7 @@ Container
 
 .container {
   padding: 20px;
+  margin: auto;
 }
 
 /* --------------------------------------------------------------------------------
@@ -29,10 +31,10 @@ Button
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  border-color: #014041;
+  border-color: rgb(56, 56, 182);
   border-width: 1px 1px 3px;
   border-radius: 4px;
-  background-color: #00acb0;
+  background-color: rgb(32, 32, 146);
   color: #f8f8f8;
   font-size: 1.1rem;
   outline: 0;
@@ -55,7 +57,7 @@ Button
 }
 
 .btn:hover {
-  background-color: #008183;
+  background-color: rgb(90, 90, 170);;
   text-decoration: none;
 }
 
@@ -98,15 +100,23 @@ Form Treatment
 .formPanel {
   box-sizing: border-box;
   width: 400px;
+  height: 500px;
   max-width: 100%;
   padding: 25px;
-  margin: 0 auto 20px;
-  background-color: #efefef;
+  margin: auto;
   border-radius: 3px;
   box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
+  background-color: rgb(109, 109, 163);
 }
 
 input {
   margin: 5px;
   margin-bottom: 10px;
+}
+
+
+
+.amount{
+  margin: auto;
+ 
 }
