--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,7 +6,11 @@ footer {
   bottom: 0;
   margin-top: 80px;
   padding: 5px;
-  text-align: center;
   margin: auto;
-  width: 100%
+  width: 100%;
+  background-color: #131369;
+  color: white;
+  height: 30px;
 }
+
+
